Push the product position content down to avoid overlap.  Closes #43

--- a/app/assets/stylesheets/gemgento/active_admin.css.scss
+++ b/app/assets/stylesheets/gemgento/active_admin.css.scss
@@ -504,6 +504,11 @@ form {
 }
 
 // PRODUCT POSITIONING
+
+.admin_product_positions #main_content_wrapper {
+  margin-top: 20px;
+}
+
 #feed-blocks-wrapper-admin {
   position: relative;
   width: 100%;
